Fix for logo on mobile and safari

--- a/assets/sass/navbar.sass
+++ b/assets/sass/navbar.sass
@@ -3,5 +3,6 @@
     top: 0
     align-self: start
 
-
+.navbar .is-logo
+    height: 4em
     
